package com.example.weeklyplanner.domain.enumeration;

public enum TaskPriority {
    LOW,
    MEDIUM,
    HIGH
}
