package com.example.weeklyplanner.domain.model;

public class SimpleWeeklyPlanner implements Planner {

    @Override
    public WeeklyPlan plan(Backlog backlog, UserPreference userPreference) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Not implemented");
    }
}
